# yui-nlp

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: classifier.rs  lib.rs  normalizer.rs
