[package]
name = "yui_nlp"
version = "0.2.0"
edition = "2021"
description = "Gatekeeper NLP para clasificacion de comandos vs conversacion"

[lib]
name = "yui_nlp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
aho-corasick = "1.1"
unicode-normalization = "0.1"
